--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     background-color: #D5E1EF;
 }
 .qr-card{
     display: flex;
-    justify-content: center;
-    margin: 25%;
+    flex-direction: column;
+    width: 300px;
     padding: 20px;
     border-radius: 10px;
-    flex-direction: column;
-    align-items:center;
     background-color: white;
+    
+
 }
 img{
     width: 100%;
@@ -19,21 +24,25 @@ img{
 h1{
     padding: 10px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 24px;
+    font-size: 21px;
     margin-top: 20px;
     line-height: 1.3;
     letter-spacing: -1px;
     color: #333;
     text-align: center;
-    
 }
 p{
     padding: 10px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
+    font-size: 17px;
     line-height: 1.5;
     letter-spacing: -1px;
     color: #919191;
     text-align: center;
     margin-top: 10px;
+}
+.attribution{
+    display: flex;
+    margin-top: 20px;
+    align-content: flex-end;
 }
