--- a/style.css
+++ b/style.css
@@ -11,19 +11,25 @@ body{
     flex-direction: column;
     width: 300px;
     padding: 20px;
-    border-radius: 10px;
+    padding-bottom: 0px;
+    border-radius: 20px;
     background-color: white;
     
 
+}
+.qr-text{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    margin-top: 0%;
 }
 
 img{
     width: 100%;
     height: auto;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 h1{
-    padding: 10px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 21px;
     margin-top: 20px;
@@ -33,7 +39,6 @@ h1{
     text-align: center;
 }
 p{
-    padding: 10px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 17px;
     line-height: 1.5;
